Fixed cards alignment issue for mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -384,11 +384,6 @@ ul, ol{
 @media screen and (max-width: 650px){
     .cards{
         width: 100%;
-    }
-}
-
-@media screen and (max-width: 650px){
-    .cards{
         .article-card{
             width: 300px;
 
@@ -397,6 +392,15 @@ ul, ol{
                 right: 7px;
                 font-size: 11px;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 650px){
+    .cards{
+        .article-card{
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 }
